# kulfi

./: CHANGELOG.md  Cargo.toml  DESIGN.md  DIGITAL_OCEAN_TESTING.md  MVP.md  README.md  TUTORIAL.md  cleanup-plan.md  machine-config.toml  rust-toolchain.toml  test-automated-infra.sh  test-binary-deploy.sh  test-daemon-auto-detection.sh  test-digital-ocean-p2p.sh  test-do-quick.sh  test-dual-droplet-p2p.sh  test-e2e.sh  test-malai-quick.sh  test-manual-setup.sh  test-real-infrastructure.sh  test-real-quick.sh  test.sh
.github/workflows/: dual-droplet-p2p-test.yml  malai-critical-tests.yml  malai-ssh-tests.yml  real-infrastructure-test.yml
kulfi/: Cargo.toml
kulfi-utils/: Cargo.toml
kulfi-utils/src/: lib.rs  secret.rs  utils_iroh.rs
kulfi.app/: ds.ftd
kulfi/src/: browse.rs  lib.rs  main.rs  start.rs  tauri.rs
kulfi/src/config/: identities.rs  read.rs
kulfi/src/control_server/: mod.rs  proxy_pass.rs  (+1 more)
kulfi/static/: browser.html
malai/: Cargo.toml
malai-cli-test-utils/src/: lib.rs  malai_cmd.rs  simple.rs  ssh.rs
malai-next/: Cargo.toml
malai.sh/: index.ftd  install.sh
malai.sh/blog/: announcing-malai.ftd
malai.sh/components/: hero.ftd
malai.sh/doc/: cluster.ftd  daemon.ftd  installation.ftd  troubleshooting.ftd
malai/src/: browse.rs  config_manager.rs  core_utils.rs  daemon.rs  daemon_socket.rs  expose_http.rs  expose_tcp.rs  http_bridge.rs  http_proxy.rs  http_proxy_remote.rs  keygen.rs  lib.rs  machine_init.rs  main.rs  run.rs  ssh_utils.rs  tcp_bridge.rs
malai/tests/: ssh_create_cluster_test.rs
tests/: ssh_create_cluster_test.rs
(+17 files in other folders)
