[package]
name = "malai-next"
version = "0.1.0"
edition.workspace = true
description = "Next-generation malai built with fastn-p2p"
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
fastn-p2p = { git = "https://github.com/fastn-stack/p2p.git" }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
eyre = "0.6"
serde = { version = "1", features = ["derive"] }
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
colored = "3"

[[bin]]
name = "expose_http"
path = "src/expose_http.rs"

[[bin]]
name = "http_bridge"
path = "src/http_bridge.rs"